refactored simulated PE